#3: Solved z-index issue by setting its value on a hover state.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -98,7 +98,6 @@ body {
   position: absolute;
   top: 0;
   left: 140px;
-  z-index: 30;
   font-size: 25px;
   color: rgba(245,245,245,0.5);
 }
@@ -106,7 +105,6 @@ body {
   position: absolute;
   top: 0;
   right: 110px;
-  z-index: 30;
   font-size: 25px;
   text-align: right;
   color: rgba(245,245,245,0.5);
@@ -114,16 +112,17 @@ body {
 .bucketsLeft{
   position: absolute;
   left: 0;
-  z-index: 1;
 }
 .bucketsRight{
   position: absolute;
   right: 0;
-  z-index: 1;
 }
 .bucket {
   position: relative;
-  z-index: 1;
+  opacity: 0.99;
+}
+.bucket:hover {
+  z-index: 30;
 }
 .unequippedItems{
   position: absolute;
@@ -131,7 +130,6 @@ body {
   width: 266px;
   height: 252px;
   white-space: normal;
-  z-index: 2;
   background-image: url(/images/bg_inventory_bucket.png);
   background-repeat: no-repeat;
   -webkit-transform-origin: 100% 0;
@@ -161,6 +159,8 @@ body {
   margin-left: 5px;
   margin-bottom: 3px;
 }
+.bucketsLeft .unequippedItems .bucketItem {float: right;}
+.bucketsRight .unequippedItems .bucketItem {float: left;}
 .unequippedItems .label {
   opacity: 0;
   position: absolute;
@@ -173,11 +173,10 @@ body {
   left: 5px;
 }
 .bucket:hover .unequippedItems .label {
-  opacity: 1;
+  opacity: 0.99;
 }
 .bucketItem {
   position: relative;
-  z-index: 1;
   width: 82px;
   height: 82px;
   margin-bottom: 30px;
